--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test:watch": "jest ./test --watch",
     "clean": "rimraf lib",
     "build": "cross-env NODE_ENV=production rollup -c",
-    "size": "npm run build && size-limit",
-    "checkAll": "npm run size && npm run lint && npm run test",
-    "contributors:generate": "npm all-contributors generate",
+    "size": "yarn build && size-limit",
+    "checkAll": "yarn size && yarn lint && yarn test",
+    "contributors:generate": "yarn all-contributors generate",
     "prepare": "cross-env NODE_ENV=production rollup -c"
   },
   "files": [
@@ -53,8 +53,8 @@
     "jalaali-js": "^1.1.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
